Make test classes public, fix format plugin